# mat_engine

./: .gitignore  Cargo.toml  Readme.md
mat_engine/: Cargo.toml
mat_engine/assets/shaders/rend_2d/: shader.vert
mat_engine/src/: application.rs  arena.rs  assets.rs  chrono.rs  context.rs  imgui.rs  lib.rs  macros.rs  render.rs  rendering.rs  slotmap.rs  systems.rs  typedefs.rs  utils.rs  windowing.rs
mat_engine/src/event/: mod.rs
mat_engine/src/event/events/: mod.rs
mat_engine/src/event/types/: mod.rs
mat_engine/src/input/: button.rs  cursor.rs  mod.rs
mat_engine/src/rendering/: bind_group.rs  colored_vertex.rs  frame.rs  generic_uniform.rs  mod.rs  textured_vertex.rs  vertex_buffer.rs  vertex_trait.rs  wgpu_pipeline.rs  wgpu_state.rs  wgpu_texture.rs
mat_engine/src/rendering/imgui_rend/: mod.rs
mat_engine/src/rendering/rend_2d/: camera_2d.rs  instance.rs  mod.rs  sprite_renderer.rs  test_uniform.rs  vertex_2d.rs  wgpu_texture.rs
mat_engine/src/rendering/rend_2d/shader_files/: shader.frag  shader.vert
mat_engine/src/rendering/shaders/: mod.rs
mat_engine/src/rendering/shaders/default_shaders/: shader.vert
mat_engine/src/shaders/: mod.rs
sample_sandbox/: Cargo.toml
sample_sandbox/src/: main.rs
