[package]
name = "mat_engine"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.null>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
winit = "0.22.1"
image = "0.23.4"
futures = "0.3.4"
imgui = "0.3.0"
imgui-wgpu = "0.6.0"
#owning_ref = "0.4.1"
slotmap = "0.4.0"

# See https://github.com/Gekkio/imgui-rs/issues/305
# Should be able to remove "=" when https://github.com/Gekkio/imgui-rs/pull/309 is merged
imgui-winit-support = "=0.3.0" 

# TODO: Configure for other OS's.
[dependencies.wgpu]
version = "0.5.0"
features = ["vulkan"]
