[package]
name = "mat_engine"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.null>"]
edition = "2018"

# Prevent publishing by mistake
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.14"
winit = "0.25.0"
image = "0.23.14"
futures = "0.3.17"
imgui = "0.8.0"
imgui-wgpu = "0.17.1"
#owning_ref = "0.4.1"
slotmap = "1.0.6"
lazy_static = "1.4.0"
nalgebra-glm = "0.15"
anyhow = "1.0.44"


#TODO: Seek better alternative -> This takes a long time to build...
#See shaderc docs for info on necessary deps for building.
shaderc = "0.7.3"

bytemuck = {version = "1.7.2", features = ["derive"]}
# zeroable = "0.2.0"

static_assertions = "1.1.0"

imgui-winit-support = "0.8.0" 

wgpu = "0.10.2"
