[package]
name = "sample_sandbox"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.null>"]
edition = "2018"

# Prevent publishing by mistake
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mat_engine = {path = "../mat_engine"}
log = "0.4.8"
flexi_logger = "0.15.2"
imgui = "0.3.0"
nalgebra-glm = "0.3"
# Temporary
winit = "0.22.1"
