[package]
name = "sample_sandbox"
version = "0.1.0"
authors = ["matms <matm31415@gmail.com>"]
edition = "2018"

# Prevent publishing by mistake
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mat_engine = {path = "../mat_engine"}
log = "0.4.14"
flexi_logger = "0.15.2"
imgui = "0.8.0"
nalgebra-glm = "0.15"
# Temporary
winit = "0.25.0"
